# crbrs

./: .gitgnore  .gitignore  Cargo.toml  README.md  cr2cmple.xxx
crbrs-cli/: Cargo.toml
crbrs-cli/src/: main.rs
crbrs-cli/tests/: cli_config_tests.rs
crbrs-lib/: .gitignore  Cargo.toml
crbrs-lib/src/: compiler.rs  config.rs  installer.rs  lib.rs
crbrs-lsp/: Cargo.toml
crbrs-lsp/src/: main.rs
local_test_datastuff/: brokenexample.cr2  cr2cmple.xxx  example.cr2
