# FILE: crbrs/Cargo.toml

[workspace]
resolver = "2"
members = [
    "crbrs-cli", # named just "crbrs" internally
    "crbrs-lib", 
    "crbrs-lsp",
]

# Optional: Define shared metadata or profiles for the whole workspace
[workspace.package]
version = "0.1.0"
edition = "2021" # Consider using 2021 edition unless you have specific reasons for 2024
authors = ["Riley Leff <rileyleff@gmail.com>"] # Replace with your info
license = "MIT OR Apache-2.0" # Specify the dual license (binaries are in separate repo so these licenses should be fine)
description = "A cross-platform command-line toolchain and LSP for Campbell Scientific CRBasic dataloggers." # Add a concise description
homepage = "https://github.com/RileyLeff/crbrs" # Link to your project homepage (usually GitHub repo)
repository = "https://github.com/RileyLeff/crbrs.git" # Link to your project repository

keywords = ["scientific", "data-logger", "crbasic", "campbell", "lsp", "datalogger", "CR200X", "CR300X", "CR1000", "environmental"]
categories = ["command-line-interface", "development-tools", "parsing", "science"]

[workspace.dependencies]
# Define dependencies used by multiple crates here to ensure version consistency
# Core dependencies likely used by both lib and cli eventually
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
log = "0.4"

# Dependencies primarily for the library
config = { version = "0.14", features = ["toml"] } # config-rs renamed to config
directories = "6.0"
reqwest = { version = "0.12", features = ["blocking", "json"] } # Start with blocking for simplicity
toml = "0.8"
zip = "2.6"
sha2 = "0.10"
regex = "1.10"

# tar = "0.4" # Add if needed for .tar.gz archives

# Dependencies primarily for the CLI
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"

# Dependencies for the LSP
lsp-server = "0.7.8"
lsp-types = { version = "0.97.0", features = ["proposed"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"]}
crossbeam-channel = "0.5"
tempfile = "3.10"
anyhow = "1.0"
# Note: Using workspace.dependencies means individual crates still need to declare
# their dependency, but they can omit the version specifier to inherit from here.

[profile.release]
lto = true
strip = true
codegen-units = 1
