[package]
name = "crbrs-lib"
version.workspace = true # Inherit version from workspace
edition.workspace = true # Inherit edition from workspace
authors.workspace = true # Inherit authors from workspace
license.workspace = true # Inherit license from workspace  <-- ADD THIS
description.workspace = true # Inherit description from workspace <-- ADD THIS
homepage.workspace = true # Inherit homepage from workspace <-- ADD THIS
repository.workspace = true # Inherit repository from workspace <-- ADD THIS
keywords.workspace = true # Inherit keywords from workspace <-- ADD THIS
categories.workspace = true # Inherit categories from workspace <-- ADD THIS
readme = "README.md" # Added this line

[dependencies]
# Inherit from workspace dependencies
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
log = { workspace = true }
config = { workspace = true, features = ["toml"] }
directories = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json"] }
zip = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
# tar = { workspace = true } # If needed