[package]
name = "crbrs-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
crbrs-lib = { path = "../crbrs-lib"}
lsp-server = { workspace = true }
lsp-types = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true }
crossbeam-channel = { workspace = true }
tempfile = { workspace = true }
anyhow = { workspace = true }