[package]
name = "crbrs-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true # Inherit license from workspace  <-- ADD THIS
description.workspace = true # Inherit description from workspace <-- ADD THIS
homepage.workspace = true # Inherit homepage from workspace <-- ADD THIS
repository.workspace = true # Inherit repository from workspace <-- ADD THIS
keywords.workspace = true # Inherit keywords from workspace <-- ADD THIS
categories.workspace = true # Inherit categories from workspace <-- ADD THIS
readme = "README.md" # Added this line

[dependencies]
crbrs-lib = { version = "0.1.1", path = "../crbrs-lib" }
lsp-server = { workspace = true }
lsp-types = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true }
crossbeam-channel = { workspace = true }
tempfile = { workspace = true }
anyhow = { workspace = true }